[gd_scene load_steps=3 format=3 uid="uid://bj12w1rfntdug"]

[ext_resource type="Script" path="res://scripts/Record.gd" id="1_ob7en"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_xmare"]

[node name="Record" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ob7en")

[node name="VBoxContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "return to main menu: "

[node name="ButtonBackToMainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "X"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select input device:"

[node name="OptionButtonInputDevices" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonMuteBackingTrack" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Backing track is not muted"

[node name="OptionButtonBackingTrack" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "Select audio file for backing track"
popup/item_0/id = 0
popup/item_0/disabled = true

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "start recording button:"

[node name="ButtonStartAndStopRecording" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Recording"

[node name="Label5" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "saved file name here:"

[node name="LineEditFileName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="Label6" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "press button to save file:"

[node name="ButtonSaveAudioFile" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save File"

[node name="AudioStreamPlayerRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_xmare")
autoplay = true
bus = &"Record"

[node name="AudioStreamPlayerBackingTrack" type="AudioStreamPlayer" parent="."]
bus = &"BackingTrack"

[connection signal="pressed" from="VBoxContainer/ButtonBackToMainMenu" to="." method="_on_button_back_to_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonMuteBackingTrack" to="." method="_on_button_mute_backing_track_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonStartAndStopRecording" to="." method="_on_button_start_and_stop_recording_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSaveAudioFile" to="." method="_on_button_save_audio_file_pressed"]
